# Rixie

./: .editorconfig  .gitignore  Makefile  README.md  audiobook.py  chunker.py  config.yaml  copy_to_reading_list.py  distill_chunk_prompt.md  distill_final_prompt.md  distill_group_prompt.md  distiller.py  export_epub.py  export_html.py  main.py  process.py  pyproject.toml  synthesizer.py  template.html
assets/: adam-smith_the-wealth-of-nations.epub  adam-smith_the-wealth-of-nations.html
docs/: GETTING_STARTED.md
skills/rixie-book-distillation/: SKILL.md
skills/rixie-book-distillation/agents/: openai.yaml
v1/: __init__.py  _paths.py  chunker.py  distill_chunk_prompt.md  distill_final_prompt.md  distiller.py  export_epub.py  export_html.py  process.py  synthesizer.py  template.html
v2/: __init__.py  blocker.py  budget.py  cartographer.py  checkpoint.py  config.py  export_epub.py  ingest.py  pipeline.py  podcast.py  process.py  prompt_block_mini_summary.md  prompt_cartographer_map.md  prompt_chapter_detailed.md  prompt_chapter_short.md  prompt_long_read.md  prompt_precise_chunk.md  prompt_ultra_dense.md  prompts.py  renderer.py  schema.py  summarizer.py  template.html
