[project]
name = "bookconvert"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "openai>=2.29.0",
    "pandoc>=2.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "ebooklib>=0.17.1",
    "markdown>=3.4.0",
    "pypdf>=3.0.0",
]
