[project]
name = "rixie"
version = "0.3.0"
description = "LLM-powered book distiller — throw books in, get distilled knowledge out"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "litellm>=1.71.1",
    "openai>=2.29.0",
    "pandoc>=2.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "ebooklib>=0.17.1",
    "markdown>=3.4.0",
    "pypdf>=3.0.0",
]

[project.scripts]
rixie = "main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["v1", "v1.*", "v2", "v2.*"]
namespaces = false

[tool.setuptools]
py-modules = ["main", "audiobook", "copy_to_reading_list"]

[tool.uv]
package = true
